--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-firebase-file-uploader": "^2.4.4",
     "react-icons": "^4.3.1",
     "react-router": "^6.1.1",
     "react-router-dom": "^6.1.1",
     "react-scripts": "4.0.3",
+    "react-switch": "^6.0.0",
     "sweetalert2": "^11.3.0",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.11"
